--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         .banner {
             background: url('assets/bg-5.png') no-repeat center center;
-            background-size: contain;
+            background-size: cover;
             /* Mengatur gambar latar belakang agar mencakup seluruh elemen */
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
