Update CSS Lagi

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             background: url('assets/bg-5.png') no-repeat center center;
             background-size: cover;
             /* Mengatur gambar latar belakang agar mencakup seluruh elemen */
-            border-radius: 10px;
+            /* border-radius: 10px; */
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
             width: 100%;
